modified:   views/submission.hbs 	modified:   views/userprofile.hbs 	modified:   views/viewpost.hbs

--- a/views/viewpost.hbs
+++ b/views/viewpost.hbs
@@ -119,7 +119,7 @@
                                 <p class="text-center mb-0" id="post_author" style="font-family: Minecraft;font-size: 20px;margin-top: 15px;width: 100%;">{{username}}</p>
                             </div>
                             <div class="row" id="post_dload_bar" style="padding: 15px;">
-                                <h1 class="text-center" id="post_dload_head" style="width: 100%;font-family: Minecraft;font-size: 25px;color: rgb(5,255,0);">Download Link :</h1><a class="text-center" href="#" style="width: 100%;height: 20px;margin: 0px;margin-top: 15px;font-family: Minecraft;color: rgb(255,255,255);">{{dLink}}<br></a></div>
+                                <h1 class="text-center" id="post_dload_head" style="width: 100%;font-family: Minecraft;font-size: 25px;color: rgb(5,255,0);">Download Link :</h1><a class="text-center" href="{{dLink}}" style="width: 100%;height: 20px;margin: 0px;margin-top: 15px;font-family: Minecraft;color: rgb(255,255,255);">{{dLink}}<br></a></div>
                             <div class="row"
                                 id="post_tags_bar" style="padding: 15px;">
                                 <h1 class="text-center" id="post_tags_head" style="width: 100%;font-family: Minecraft;font-size: 25px;color: rgb(255,138,0);"></h1>
